sprint 8 - core logic and tests